--- a/index.html
+++ b/index.html
@@ -187,6 +187,38 @@
               <div class="card-container">
                 <h3 class="partner-name">Mark Guerrero</h3>
                 <p class="partner-place">Product Designer</p>
+                <ul class="socialwebs-list">
+                  <li class="socialweb-item">
+                    <a href="" class="socialweb-link">
+                      <svg class="social-item-icon" width="20" height="20">
+                        <use
+                          href="/images/symbol-defs.svg#icon-instagram"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="socialweb-item">
+                    <a href="" class="socialweb-link">
+                      <svg class="social-item-icon" width="20" height="20">
+                        <use href="/images/symbol-defs.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="socialweb-item">
+                    <a href="" class="socialweb-link">
+                      <svg class="social-item-icon" width="20" height="20">
+                        <use href="/images/symbol-defs.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="socialweb-item">
+                    <a href="" class="socialweb-link">
+                      <svg class="social-item-icon" width="20" height="20">
+                        <use href="/images/symbol-defs.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <!--Section3 card 2-->
@@ -200,6 +232,38 @@
               <div class="card-container">
                 <h3 class="partner-name">Tom Ford</h3>
                 <p class="partner-place">Frontend Developer</p>
+                <ul class="socialwebs-list">
+                  <li class="socialweb-item">
+                    <a href="" class="socialweb-link">
+                      <svg class="social-item-icon" width="20" height="20">
+                        <use
+                          href="/images/symbol-defs.svg#icon-instagram"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="socialweb-item">
+                    <a href="" class="socialweb-link">
+                      <svg class="social-item-icon" width="20" height="20">
+                        <use href="/images/symbol-defs.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="socialweb-item">
+                    <a href="" class="socialweb-link">
+                      <svg class="social-item-icon" width="20" height="20">
+                        <use href="/images/symbol-defs.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="socialweb-item">
+                    <a href="" class="socialweb-link">
+                      <svg class="social-item-icon" width="20" height="20">
+                        <use href="/images/symbol-defs.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <!--Section3 card 3-->
@@ -213,6 +277,38 @@
               <div class="card-container">
                 <h3 class="partner-name">Camila Garcia</h3>
                 <p class="partner-place">Marketing</p>
+                <ul class="socialwebs-list">
+                  <li class="socialweb-item">
+                    <a href="" class="socialweb-link">
+                      <svg class="social-item-icon" width="20" height="20">
+                        <use
+                          href="/images/symbol-defs.svg#icon-instagram"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="socialweb-item">
+                    <a href="" class="socialweb-link">
+                      <svg class="social-item-icon" width="20" height="20">
+                        <use href="/images/symbol-defs.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="socialweb-item">
+                    <a href="" class="socialweb-link">
+                      <svg class="social-item-icon" width="20" height="20">
+                        <use href="/images/symbol-defs.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="socialweb-item">
+                    <a href="" class="socialweb-link">
+                      <svg class="social-item-icon" width="20" height="20">
+                        <use href="/images/symbol-defs.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <!--Section3 card 4-->
@@ -226,6 +322,38 @@
               <div class="card-container">
                 <h3 class="partner-name">Daniel Wilson</h3>
                 <p class="partner-place">UI Designer</p>
+                <ul class="socialwebs-list">
+                  <li class="socialweb-item">
+                    <a href="" class="socialweb-link">
+                      <svg class="social-item-icon" width="20" height="20">
+                        <use
+                          href="/images/symbol-defs.svg#icon-instagram"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="socialweb-item">
+                    <a href="" class="socialweb-link">
+                      <svg class="social-item-icon" width="20" height="20">
+                        <use href="/images/symbol-defs.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="socialweb-item">
+                    <a href="" class="socialweb-link">
+                      <svg class="social-item-icon" width="20" height="20">
+                        <use href="/images/symbol-defs.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="socialweb-item">
+                    <a href="" class="socialweb-link">
+                      <svg class="social-item-icon" width="20" height="20">
+                        <use href="/images/symbol-defs.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
