--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
 
     <!--Футер сторінки Index (ідентичний для Portfolio) - DONE -->
     <footer class="underground">
-      <div class="container">
+      <div class="container footer-all">
         <div class="footer-box">
           <!--Logo WebStudio-->
           <a href="./index.html" target="_parent" class="logodecor-footer">
@@ -376,6 +376,40 @@
             Increase the flow of customers and sales for your business with
             digital marketing & growth solutions.
           </p>
+        </div>
+
+        <div class="footer-socialweb-box">
+          <h3 class="footer-socialweb-box-title">Social media</h3>
+          <ul class="footer-socialwebs-list">
+            <li class="footer-socialweb-item">
+              <a href="" class="footer-socialweb-link">
+                <svg class="footer-social-item-icon" width="24" height="24">
+                  <use href="/images/symbol-defs.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-socialweb-item">
+              <a href="" class="footer-socialweb-link">
+                <svg class="footer-social-item-icon" width="24" height="24">
+                  <use href="/images/symbol-defs.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-socialweb-item">
+              <a href="" class="footer-socialweb-link">
+                <svg class="footer-social-item-icon" width="24" height="24">
+                  <use href="/images/symbol-defs.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-socialweb-item">
+              <a href="" class="footer-socialweb-link">
+                <svg class="footer-social-item-icon" width="24" height="24">
+                  <use href="/images/symbol-defs.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
         </div>
       </div>
     </footer>
