--- a/index.html
+++ b/index.html
@@ -99,6 +99,11 @@
           <ul class="preferences list">
             <!--Section 1 block 1-->
             <li class="pref-list-box">
+              <div class="pref-icon-box">
+                <svg class="social-item-icon" width="64" height="64">
+                  <use href="/images/symbol-defs.svg#icon-antenna"></use>
+                </svg>
+              </div>
               <h3 class="preferences-list">Strategy</h3>
               <p class="pref-paragraph">
                 Our goal is to identify the business problem to walk away with
@@ -107,6 +112,11 @@
             </li>
             <!--Section 1 block 2-->
             <li class="pref-list-box">
+              <div class="pref-icon-box">
+                <svg class="social-item-icon" width="64" height="64">
+                  <use href="/images/symbol-defs.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="preferences-list">Punctuality</h3>
               <p class="pref-paragraph">
                 Bring the key message to the brand's audience for the best price
@@ -115,6 +125,11 @@
             </li>
             <!--Section 1 block 3-->
             <li class="pref-list-box">
+              <div class="pref-icon-box">
+                <svg class="social-item-icon" width="64" height="64">
+                  <use href="/images/symbol-defs.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h3 class="preferences-list">Diligence</h3>
               <p class="pref-paragraph">
                 Research and confirm brands that present the strongest digital
@@ -123,6 +138,11 @@
             </li>
             <!--Section 1 block 4-->
             <li class="pref-list-box">
+              <div class="pref-icon-box">
+                <svg class="social-item-icon" width="64" height="64">
+                  <use href="/images/symbol-defs.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="preferences-list">Technologies</h3>
               <p class="pref-paragraph">
                 Design practice focused on digital experiences. We bring forth a
@@ -360,6 +380,45 @@
         </div>
       </section>
     </main>
+
+    <!--Section5 Customers -->
+    <section class="customers">
+      <div class="customers-box">
+        <h2 class="customers-title">Customers</h2>
+        <ul class="customers-icons-list">
+          <li class="customers-icon-box">
+            <svg class="customers-icon" width="104" height="56">
+              <use href="/images/symbol-defs.svg#icon-client2"></use>
+            </svg>
+          </li>
+          <li class="customers-icon-box">
+            <svg class="customers-icon" width="104" height="56">
+              <use href="/images/symbol-defs.svg#icon-client1"></use>
+            </svg>
+          </li>
+          <li class="customers-icon-box">
+            <svg class="customers-icon" width="104" height="56">
+              <use href="/images/symbol-defs.svg#icon-client3"></use>
+            </svg>
+          </li>
+          <li class="customers-icon-box">
+            <svg class="customers-icon" width="104" height="56">
+              <use href="/images/symbol-defs.svg#icon-client4"></use>
+            </svg>
+          </li>
+          <li class="customers-icon-box">
+            <svg class="customers-icon" width="104" height="56">
+              <use href="/images/symbol-defs.svg#icon-client5"></use>
+            </svg>
+          </li>
+          <li class="customers-icon-box">
+            <svg class="customers-icon" width="104" height="56">
+              <use href="/images/symbol-defs.svg#icon-client6"></use>
+            </svg>
+          </li>
+        </ul>
+      </div>
+    </section>
 
     <!--Футер сторінки Index (ідентичний для Portfolio) - DONE -->
     <footer class="underground">
