--- a/index.html
+++ b/index.html
@@ -381,15 +381,17 @@
       </section>
     </main>
 
-    <!--Section5 Customers -->
+    <!--Section5 Customers - -->
     <section class="customers">
       <div class="customers-box">
         <h2 class="customers-title">Customers</h2>
         <ul class="customers-icons-list">
           <li class="customers-icon-box">
-            <svg class="customers-icon" width="104" height="56">
-              <use href="/images/symbol-defs.svg#icon-client2"></use>
-            </svg>
+            <a href="" class="customer-icon-link"
+              ><svg class="customers-icon" width="104" height="56">
+                <use href="/images/symbol-defs.svg#icon-client2"></use>
+              </svg>
+            </a>
           </li>
           <li class="customers-icon-box">
             <svg class="customers-icon" width="104" height="56">
