block Customers Done

--- a/index.html
+++ b/index.html
@@ -389,34 +389,44 @@
           <li class="customers-icon-box">
             <a href="" class="customer-icon-link"
               ><svg class="customers-icon" width="104" height="56">
+                <use href="/images/symbol-defs.svg#icon-client1"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="customers-icon-box">
+            <a href="" class="customer-icon-link">
+              <svg class="customers-icon" width="104" height="56">
                 <use href="/images/symbol-defs.svg#icon-client2"></use>
               </svg>
             </a>
           </li>
           <li class="customers-icon-box">
-            <svg class="customers-icon" width="104" height="56">
-              <use href="/images/symbol-defs.svg#icon-client1"></use>
-            </svg>
+            <a href="" class="customer-icon-link">
+              <svg class="customers-icon" width="104" height="56">
+                <use href="/images/symbol-defs.svg#icon-client3"></use>
+              </svg>
+            </a>
           </li>
           <li class="customers-icon-box">
-            <svg class="customers-icon" width="104" height="56">
-              <use href="/images/symbol-defs.svg#icon-client3"></use>
-            </svg>
+            <a href="" class="customer-icon-link">
+              <svg class="customers-icon" width="104" height="56">
+                <use href="/images/symbol-defs.svg#icon-client4"></use>
+              </svg>
+            </a>
           </li>
           <li class="customers-icon-box">
-            <svg class="customers-icon" width="104" height="56">
-              <use href="/images/symbol-defs.svg#icon-client4"></use>
-            </svg>
+            <a href="" class="customer-icon-link">
+              <svg class="customers-icon" width="104" height="56">
+                <use href="/images/symbol-defs.svg#icon-client5"></use>
+              </svg>
+            </a>
           </li>
           <li class="customers-icon-box">
-            <svg class="customers-icon" width="104" height="56">
-              <use href="/images/symbol-defs.svg#icon-client5"></use>
-            </svg>
-          </li>
-          <li class="customers-icon-box">
-            <svg class="customers-icon" width="104" height="56">
-              <use href="/images/symbol-defs.svg#icon-client6"></use>
-            </svg>
+            <a href="" class="customer-icon-link">
+              <svg class="customers-icon" width="104" height="56">
+                <use href="/images/symbol-defs.svg#icon-client6"></use>
+              </svg>
+            </a>
           </li>
         </ul>
       </div>
