--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             <li class="pref-list-box">
               <div class="pref-icon-box">
                 <svg class="social-item-icon" width="64" height="64">
-                  <use href="/images/symbol-defs.svg#icon-antenna"></use>
+                  <use href="./images/symbol-defs.svg#icon-antenna"></use>
                 </svg>
               </div>
               <h3 class="preferences-list">Strategy</h3>
@@ -114,7 +114,7 @@
             <li class="pref-list-box">
               <div class="pref-icon-box">
                 <svg class="social-item-icon" width="64" height="64">
-                  <use href="/images/symbol-defs.svg#icon-clock"></use>
+                  <use href="./images/symbol-defs.svg#icon-clock"></use>
                 </svg>
               </div>
               <h3 class="preferences-list">Punctuality</h3>
@@ -127,7 +127,7 @@
             <li class="pref-list-box">
               <div class="pref-icon-box">
                 <svg class="social-item-icon" width="64" height="64">
-                  <use href="/images/symbol-defs.svg#icon-diagram"></use>
+                  <use href="./images/symbol-defs.svg#icon-diagram"></use>
                 </svg>
               </div>
               <h3 class="preferences-list">Diligence</h3>
@@ -140,7 +140,7 @@
             <li class="pref-list-box">
               <div class="pref-icon-box">
                 <svg class="social-item-icon" width="64" height="64">
-                  <use href="/images/symbol-defs.svg#icon-astronaut"></use>
+                  <use href="./images/symbol-defs.svg#icon-astronaut"></use>
                 </svg>
               </div>
               <h3 class="preferences-list">Technologies</h3>
@@ -389,42 +389,42 @@
           <li class="customers-icon-box">
             <a href="" class="customer-icon-link"
               ><svg class="customers-icon" width="104" height="56">
-                <use href="/images/symbol-defs.svg#icon-client1"></use>
+                <use href="./images/symbol-defs.svg#icon-client1"></use>
               </svg>
             </a>
           </li>
           <li class="customers-icon-box">
             <a href="" class="customer-icon-link">
               <svg class="customers-icon" width="104" height="56">
-                <use href="/images/symbol-defs.svg#icon-client2"></use>
+                <use href="./images/symbol-defs.svg#icon-client2"></use>
               </svg>
             </a>
           </li>
           <li class="customers-icon-box">
             <a href="" class="customer-icon-link">
               <svg class="customers-icon" width="104" height="56">
-                <use href="/images/symbol-defs.svg#icon-client3"></use>
+                <use href="./images/symbol-defs.svg#icon-client3"></use>
               </svg>
             </a>
           </li>
           <li class="customers-icon-box">
             <a href="" class="customer-icon-link">
               <svg class="customers-icon" width="104" height="56">
-                <use href="/images/symbol-defs.svg#icon-client4"></use>
+                <use href="./images/symbol-defs.svg#icon-client4"></use>
               </svg>
             </a>
           </li>
           <li class="customers-icon-box">
             <a href="" class="customer-icon-link">
               <svg class="customers-icon" width="104" height="56">
-                <use href="/images/symbol-defs.svg#icon-client5"></use>
+                <use href="./images/symbol-defs.svg#icon-client5"></use>
               </svg>
             </a>
           </li>
           <li class="customers-icon-box">
             <a href="" class="customer-icon-link">
               <svg class="customers-icon" width="104" height="56">
-                <use href="/images/symbol-defs.svg#icon-client6"></use>
+                <use href="./images/symbol-defs.svg#icon-client6"></use>
               </svg>
             </a>
           </li>
