--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
 
     <!--Section5 Customers - -->
     <section class="customers">
-      <div class="customers-box">
+      <div class="container">
         <h2 class="customers-title">Customers</h2>
         <ul class="customers-icons-list">
           <li class="customers-icon-box">
