--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@
         </div>
 
         <div class="footer-socialweb-box">
-          <h3 class="footer-socialweb-box-title">Social media</h3>
+          <p class="footer-socialweb-box-title">Social media</p>
           <ul class="footer-socialwebs-list">
             <li class="footer-socialweb-item">
               <a href="" class="footer-socialweb-link">
