--- a/portfolio.html
+++ b/portfolio.html
@@ -108,120 +108,140 @@
           <ul class="cards-block list">
             <!--Image1-->
             <li class="portf-list-box">
-              <img
-                src="./images/img-2-1-1.jpg"
-                alt="Banking App Interface Concept"
-                width="360"
-                class="portf-photos"
-              />
-              <div class="card-description">
-                <h3 class="image-text-title">Banking App Interface Concept</h3>
-                <p class="image-description">App</p>
-              </div>
+              <a class="portf-link" href="#">
+                <img
+                  src="./images/img-2-1-1.jpg"
+                  alt="Banking App Interface Concept"
+                  width="360"
+                  class="portf-photos"
+                />
+                <div class="card-description">
+                  <h3 class="image-text-title">
+                    Banking App Interface Concept
+                  </h3>
+                  <p class="image-description">App</p>
+                </div>
+              </a>
             </li>
             <!--Image2-->
             <li class="portf-list-box">
-              <img
-                src="./images/img-2-1-2.jpg"
-                alt="Phone Cashless Payment"
-                width="360"
-                class="portf-photos"
-              />
-              <div class="card-description">
-                <h3 class="image-text-title">Cashless Payment</h3>
-                <p class="image-description">Marketing</p>
-              </div>
+              <a class="portf-link" href="#">
+                <img
+                  src="./images/img-2-1-2.jpg"
+                  alt="Phone Cashless Payment"
+                  width="360"
+                  class="portf-photos"
+                />
+                <div class="card-description">
+                  <h3 class="image-text-title">Cashless Payment</h3>
+                  <p class="image-description">Marketing</p>
+                </div>
+              </a>
             </li>
             <!--Image3-->
             <li class="portf-list-box">
-              <img
-                src="./images/img-2-1-3.jpg"
-                alt="Laptop Meditaion App"
-                width="360"
-                class="portf-photos"
-              />
-              <div class="card-description">
-                <h3 class="image-text-title">Meditation App</h3>
-                <p class="image-description">App</p>
-              </div>
+              <a class="portf-link" href="#">
+                <img
+                  src="./images/img-2-1-3.jpg"
+                  alt="Laptop Meditaion App"
+                  width="360"
+                  class="portf-photos"
+                />
+                <div class="card-description">
+                  <h3 class="image-text-title">Meditation App</h3>
+                  <p class="image-description">App</p>
+                </div>
+              </a>
             </li>
             <!--Image4-->
             <li class="portf-list-box">
-              <img
-                src="./images/img-2-1-4.jpg"
-                alt="Taxi Service Look Inside"
-                width="360"
-                class="portf-photos"
-              />
-              <div class="card-description">
-                <h3 class="image-text-title">Taxi Service</h3>
-                <p class="image-description">Marketing</p>
-              </div>
+              <a class="portf-link" href="#">
+                <img
+                  src="./images/img-2-1-4.jpg"
+                  alt="Taxi Service Look Inside"
+                  width="360"
+                  class="portf-photos"
+                />
+                <div class="card-description">
+                  <h3 class="image-text-title">Taxi Service</h3>
+                  <p class="image-description">Marketing</p>
+                </div>
+              </a>
             </li>
             <!--Image5-->
             <li class="portf-list-box">
-              <img
-                src="./images/img-2-1-5.jpg"
-                alt="Phone Screen Illustrations"
-                width="360"
-                class="portf-photos"
-              />
-              <div class="card-description">
-                <h3 class="image-text-title">Screen Illustrations</h3>
-                <p class="image-description">Design</p>
-              </div>
+              <a class="portf-link" href="#">
+                <img
+                  src="./images/img-2-1-5.jpg"
+                  alt="Phone Screen Illustrations"
+                  width="360"
+                  class="portf-photos"
+                />
+                <div class="card-description">
+                  <h3 class="image-text-title">Screen Illustrations</h3>
+                  <p class="image-description">Design</p>
+                </div>
+              </a>
             </li>
             <!--Image6-->
             <li class="portf-list-box">
-              <img
-                src="./images/img-2-1-6.jpg"
-                alt="Young Girl in Orange"
-                width="360"
-                class="portf-photos"
-              />
-              <div class="card-description">
-                <h3 class="image-text-title">Online Courses</h3>
-                <p class="image-description">Marketing</p>
-              </div>
+              <a class="portf-link" href="#">
+                <img
+                  src="./images/img-2-1-6.jpg"
+                  alt="Young Girl in Orange"
+                  width="360"
+                  class="portf-photos"
+                />
+                <div class="card-description">
+                  <h3 class="image-text-title">Online Courses</h3>
+                  <p class="image-description">Marketing</p>
+                </div>
+              </a>
             </li>
             <!--Image7-->
             <li class="portf-list-box">
-              <img
-                src="./images/img-2-1-7.jpg"
-                alt="Instagram Stories Concept"
-                width="360"
-                class="portf-photos"
-              />
-              <div class="card-description">
-                <h3 class="image-text-title">Instagram Stories Concept</h3>
-                <p class="image-description">Design</p>
-              </div>
+              <a class="portf-link" href="#">
+                <img
+                  src="./images/img-2-1-7.jpg"
+                  alt="Instagram Stories Concept"
+                  width="360"
+                  class="portf-photos"
+                />
+                <div class="card-description">
+                  <h3 class="image-text-title">Instagram Stories Concept</h3>
+                  <p class="image-description">Design</p>
+                </div>
+              </a>
             </li>
             <!--Image8-->
             <li class="portf-list-box">
-              <img
-                src="./images/img-2-1-8.jpg"
-                alt="Girl in Grey with Organic Food"
-                width="360"
-                class="portf-photos"
-              />
-              <div class="card-description">
-                <h3 class="image-text-title">Organic Food</h3>
-                <p class="image-description">Web Site</p>
-              </div>
+              <a class="portf-link" href="#">
+                <img
+                  src="./images/img-2-1-8.jpg"
+                  alt="Girl in Grey with Organic Food"
+                  width="360"
+                  class="portf-photos"
+                />
+                <div class="card-description">
+                  <h3 class="image-text-title">Organic Food</h3>
+                  <p class="image-description">Web Site</p>
+                </div>
+              </a>
             </li>
             <!--Image9-->
             <li class="portf-list-box">
-              <img
-                src="./images/img-2-1-9.jpg"
-                alt="Fresh Coffee with Milk"
-                width="360"
-                class="portf-photos"
-              />
-              <div class="card-description">
-                <h3 class="image-text-title">Fresh Coffee</h3>
-                <p class="image-description">Web Site</p>
-              </div>
+              <a class="portf-link" href="#">
+                <img
+                  src="./images/img-2-1-9.jpg"
+                  alt="Fresh Coffee with Milk"
+                  width="360"
+                  class="portf-photos"
+                />
+                <div class="card-description">
+                  <h3 class="image-text-title">Fresh Coffee</h3>
+                  <p class="image-description">Web Site</p>
+                </div>
+              </a>
             </li>
           </ul>
         </div>
