--- a/index.html
+++ b/index.html
@@ -99,11 +99,11 @@
           <ul class="preferences list">
             <!--Section 1 block 1-->
             <li class="pref-list-box">
-              <div class="pref-icon-box">
-                <svg class="social-item-icon" width="64" height="64">
+              <a class="pref-icon-box" href="#">
+                <svg class="pref-item-icon" width="64" height="64">
                   <use href="./images/symbol-defs.svg#icon-antenna"></use>
                 </svg>
-              </div>
+              </a>
               <h3 class="preferences-list">Strategy</h3>
               <p class="pref-paragraph">
                 Our goal is to identify the business problem to walk away with
@@ -112,11 +112,11 @@
             </li>
             <!--Section 1 block 2-->
             <li class="pref-list-box">
-              <div class="pref-icon-box">
-                <svg class="social-item-icon" width="64" height="64">
+              <a class="pref-icon-box" href="#">
+                <svg class="pref-item-icon" width="64" height="64">
                   <use href="./images/symbol-defs.svg#icon-clock"></use>
                 </svg>
-              </div>
+              </a>
               <h3 class="preferences-list">Punctuality</h3>
               <p class="pref-paragraph">
                 Bring the key message to the brand's audience for the best price
@@ -125,11 +125,11 @@
             </li>
             <!--Section 1 block 3-->
             <li class="pref-list-box">
-              <div class="pref-icon-box">
-                <svg class="social-item-icon" width="64" height="64">
+              <a class="pref-icon-box" href="#">
+                <svg class="pref-item-icon" width="64" height="64">
                   <use href="./images/symbol-defs.svg#icon-diagram"></use>
                 </svg>
-              </div>
+              </a>
               <h3 class="preferences-list">Diligence</h3>
               <p class="pref-paragraph">
                 Research and confirm brands that present the strongest digital
@@ -138,11 +138,11 @@
             </li>
             <!--Section 1 block 4-->
             <li class="pref-list-box">
-              <div class="pref-icon-box">
-                <svg class="social-item-icon" width="64" height="64">
+              <a class="pref-icon-box" href="#">
+                <svg class="pref-item-icon" width="64" height="64">
                   <use href="./images/symbol-defs.svg#icon-astronaut"></use>
                 </svg>
-              </div>
+              </a>
               <h3 class="preferences-list">Technologies</h3>
               <p class="pref-paragraph">
                 Design practice focused on digital experiences. We bring forth a
