--- a/portfolio.html
+++ b/portfolio.html
@@ -271,28 +271,28 @@
             <li class="footer-socialweb-item">
               <a href="" class="footer-socialweb-link">
                 <svg class="footer-social-item-icon" width="24" height="24">
-                  <use href="/images/symbol-defs.svg#icon-instagram"></use>
+                  <use href="./images/symbol-defs.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-socialweb-item">
               <a href="" class="footer-socialweb-link">
                 <svg class="footer-social-item-icon" width="24" height="24">
-                  <use href="/images/symbol-defs.svg#icon-twitter"></use>
+                  <use href="./images/symbol-defs.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-socialweb-item">
               <a href="" class="footer-socialweb-link">
                 <svg class="footer-social-item-icon" width="24" height="24">
-                  <use href="/images/symbol-defs.svg#icon-facebook"></use>
+                  <use href="./images/symbol-defs.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-socialweb-item">
               <a href="" class="footer-socialweb-link">
                 <svg class="footer-social-item-icon" width="24" height="24">
-                  <use href="/images/symbol-defs.svg#icon-linkedin"></use>
+                  <use href="./images/symbol-defs.svg#icon-linkedin"></use>
                 </svg>
               </a>
             </li>
