--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                     <a href="" class="socialweb-link">
                       <svg class="social-item-icon" width="20" height="20">
                         <use
-                          href="/images/symbol-defs.svg#icon-instagram"
+                          href="./images/symbol-defs.svg#icon-instagram"
                         ></use>
                       </svg>
                     </a>
@@ -220,21 +220,25 @@
                   <li class="socialweb-item">
                     <a href="" class="socialweb-link">
                       <svg class="social-item-icon" width="20" height="20">
-                        <use href="/images/symbol-defs.svg#icon-twitter"></use>
+                        <use href="./images/symbol-defs.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="socialweb-item">
                     <a href="" class="socialweb-link">
                       <svg class="social-item-icon" width="20" height="20">
-                        <use href="/images/symbol-defs.svg#icon-facebook"></use>
+                        <use
+                          href="./images/symbol-defs.svg#icon-facebook"
+                        ></use>
                       </svg>
                     </a>
                   </li>
                   <li class="socialweb-item">
                     <a href="" class="socialweb-link">
                       <svg class="social-item-icon" width="20" height="20">
-                        <use href="/images/symbol-defs.svg#icon-linkedin"></use>
+                        <use
+                          href="./images/symbol-defs.svg#icon-linkedin"
+                        ></use>
                       </svg>
                     </a>
                   </li>
@@ -257,7 +261,7 @@
                     <a href="" class="socialweb-link">
                       <svg class="social-item-icon" width="20" height="20">
                         <use
-                          href="/images/symbol-defs.svg#icon-instagram"
+                          href="./images/symbol-defs.svg#icon-instagram"
                         ></use>
                       </svg>
                     </a>
@@ -265,21 +269,25 @@
                   <li class="socialweb-item">
                     <a href="" class="socialweb-link">
                       <svg class="social-item-icon" width="20" height="20">
-                        <use href="/images/symbol-defs.svg#icon-twitter"></use>
+                        <use href="./images/symbol-defs.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="socialweb-item">
                     <a href="" class="socialweb-link">
                       <svg class="social-item-icon" width="20" height="20">
-                        <use href="/images/symbol-defs.svg#icon-facebook"></use>
+                        <use
+                          href="./images/symbol-defs.svg#icon-facebook"
+                        ></use>
                       </svg>
                     </a>
                   </li>
                   <li class="socialweb-item">
                     <a href="" class="socialweb-link">
                       <svg class="social-item-icon" width="20" height="20">
-                        <use href="/images/symbol-defs.svg#icon-linkedin"></use>
+                        <use
+                          href="./images/symbol-defs.svg#icon-linkedin"
+                        ></use>
                       </svg>
                     </a>
                   </li>
@@ -302,7 +310,7 @@
                     <a href="" class="socialweb-link">
                       <svg class="social-item-icon" width="20" height="20">
                         <use
-                          href="/images/symbol-defs.svg#icon-instagram"
+                          href="./images/symbol-defs.svg#icon-instagram"
                         ></use>
                       </svg>
                     </a>
@@ -310,21 +318,25 @@
                   <li class="socialweb-item">
                     <a href="" class="socialweb-link">
                       <svg class="social-item-icon" width="20" height="20">
-                        <use href="/images/symbol-defs.svg#icon-twitter"></use>
+                        <use href="./images/symbol-defs.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="socialweb-item">
                     <a href="" class="socialweb-link">
                       <svg class="social-item-icon" width="20" height="20">
-                        <use href="/images/symbol-defs.svg#icon-facebook"></use>
+                        <use
+                          href="./images/symbol-defs.svg#icon-facebook"
+                        ></use>
                       </svg>
                     </a>
                   </li>
                   <li class="socialweb-item">
                     <a href="" class="socialweb-link">
                       <svg class="social-item-icon" width="20" height="20">
-                        <use href="/images/symbol-defs.svg#icon-linkedin"></use>
+                        <use
+                          href="./images/symbol-defs.svg#icon-linkedin"
+                        ></use>
                       </svg>
                     </a>
                   </li>
@@ -347,7 +359,7 @@
                     <a href="" class="socialweb-link">
                       <svg class="social-item-icon" width="20" height="20">
                         <use
-                          href="/images/symbol-defs.svg#icon-instagram"
+                          href="./images/symbol-defs.svg#icon-instagram"
                         ></use>
                       </svg>
                     </a>
@@ -355,21 +367,25 @@
                   <li class="socialweb-item">
                     <a href="" class="socialweb-link">
                       <svg class="social-item-icon" width="20" height="20">
-                        <use href="/images/symbol-defs.svg#icon-twitter"></use>
+                        <use href="./images/symbol-defs.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="socialweb-item">
                     <a href="" class="socialweb-link">
                       <svg class="social-item-icon" width="20" height="20">
-                        <use href="/images/symbol-defs.svg#icon-facebook"></use>
+                        <use
+                          href="./images/symbol-defs.svg#icon-facebook"
+                        ></use>
                       </svg>
                     </a>
                   </li>
                   <li class="socialweb-item">
                     <a href="" class="socialweb-link">
                       <svg class="social-item-icon" width="20" height="20">
-                        <use href="/images/symbol-defs.svg#icon-linkedin"></use>
+                        <use
+                          href="./images/symbol-defs.svg#icon-linkedin"
+                        ></use>
                       </svg>
                     </a>
                   </li>
@@ -380,7 +396,7 @@
         </div>
       </section>
 
-      <!--Section5 Customers - -->
+      <!--Section5 Customers - DONE -->
       <section class="customers">
         <div class="container">
           <h2 class="customers-title">Customers</h2>
@@ -455,28 +471,28 @@
             <li class="footer-socialweb-item">
               <a href="" class="footer-socialweb-link">
                 <svg class="footer-social-item-icon" width="24" height="24">
-                  <use href="/images/symbol-defs.svg#icon-instagram"></use>
+                  <use href="./images/symbol-defs.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-socialweb-item">
               <a href="" class="footer-socialweb-link">
                 <svg class="footer-social-item-icon" width="24" height="24">
-                  <use href="/images/symbol-defs.svg#icon-twitter"></use>
+                  <use href="./images/symbol-defs.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-socialweb-item">
               <a href="" class="footer-socialweb-link">
                 <svg class="footer-social-item-icon" width="24" height="24">
-                  <use href="/images/symbol-defs.svg#icon-facebook"></use>
+                  <use href="./images/symbol-defs.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-socialweb-item">
               <a href="" class="footer-socialweb-link">
                 <svg class="footer-social-item-icon" width="24" height="24">
-                  <use href="/images/symbol-defs.svg#icon-linkedin"></use>
+                  <use href="./images/symbol-defs.svg#icon-linkedin"></use>
                 </svg>
               </a>
             </li>
